--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,4 @@
+spring.profiles.include=auth
 logging.level.org.springframework.jdbc.core=TRACE
 logging.level.org.hibernate.type.descriptor.sql=TRACE
 spring.h2.console.enabled=true
