--- a/build.gradle
+++ b/build.gradle
@@ -21,23 +21,25 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+	implementation "org.springframework.boot:spring-boot-starter-web"
+	implementation "org.flywaydb:flyway-core"
+	implementation "io.jsonwebtoken:jjwt:0.9.1"
 	implementation "org.springframework.boot:spring-boot-starter-security"
-	implementation 'org.flywaydb:flyway-core'
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
-	compileOnly 'org.projectlombok:lombok'
+	compileOnly "org.projectlombok:lombok"
 
-	runtimeOnly 'com.h2database:h2'
+	runtimeOnly "com.h2database:h2"
 
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+	annotationProcessor "org.projectlombok:lombok"
 
-	asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.5.RELEASE'
-	testImplementation 'org.springframework.restdocs:spring-restdocs-restassured:2.0.5.RELEASE'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.rest-assured:rest-assured:3.3.0'
+	asciidoctorExt "org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.5.RELEASE"
+	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation "org.springframework.boot:spring-boot-starter-test"
+	testImplementation "org.springframework.restdocs:spring-restdocs-restassured:2.0.5.RELEASE"
+	testImplementation "io.rest-assured:rest-assured:3.3.0"
+
 }
 
 tasks.named('test') {
