--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,7 @@
 spring.profiles.include=auth
 logging.level.org.springframework.jdbc.core=TRACE
 logging.level.org.hibernate.type.descriptor.sql=TRACE
+logging.level.org.springframework.security=TRACE
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.format_sql=true
